tests/paczka1/fuzzy1/36813361.err
Error in line 2: HvMbtc A549 32,1
Error in line 8: FBPa10bgy S226 24,4
Error in line 17: FBPa10bgy A549 -5,3
Error in line 15: uCu A549 95,7
